--- a/Final_Project/css/style.css
+++ b/Final_Project/css/style.css
@@ -8,7 +8,7 @@
 
 /* Variables */
 :root {
-  --main-color: #0c65ed;
+  --main-color: #0d6efd;
 }
 
 /* Global Style */
@@ -74,6 +74,9 @@
   padding: 5% 0;
 }
 
+i{
+  cursor: pointer;
+}
 /* Custom Style */
 /* Start Nav */
 nav ul li a:hover {
@@ -155,9 +158,11 @@ nav ul li a:hover {
 .services i {
   font-size: 60px;
 }
-
+.overlay-text{
+  transition-duration: 0.4s;
+}
 .services .service:hover .overlay-text {
-  display: block !important;
+  opacity: 100% !important;
   top: 0 !important;
 }
 
@@ -167,11 +172,26 @@ nav ul li a:hover {
   transition-duration: 0.5s;
 }
 
-.work .filter-btn:hover,
-.work .filter-btn:focus {
+.work .filter-btn{
+  color: black;
+}
+.work .filter-btn:hover{
+  color: var(--main-color);
+  background-color: white;
+}
+.work .filter-btn:hover {
   color: var(--main-color);
 }
 
+.work .filter-btn.active {
+  background-color: var(--main-color);
+  color: white;
+}
+
+.work .filter-btn.active:hover {
+  background-color: var(--main-color);
+  color: white;
+}
 .card {
   transition-duration: 0.5s;
 }
@@ -203,22 +223,181 @@ nav ul li a:hover {
 
 /* End Work Section */
 /* Start Team Section */
-.team-card{
+.team-card {
   transition-duration: 0.5s;
 }
-.team-card .team-card-text{
+
+.team-card .team-card-text {
   box-shadow: 0 -5px 5px rgba(0, 0, 0, 0.1);
 }
-.team-card:hover .title{
+
+.team-card:hover .title {
   border: none !important;
 }
-.team-card:hover .hidden-text{
+
+.hidden-text {
+  overflow: hidden;
+}
+
+.team-card:hover .hidden-text {
   display: block !important;
 }
-.team-card .social-icons i{
+
+.team-card .social-icons i {
   transition-duration: 0.5s;
 }
-.team-card .social-icons i:hover{
+
+.team-card .social-icons i:hover {
   color: black;
 }
+
 /* End Team Section */
+/* Start Pricing Section */
+.pricing .glassy-btn {
+  width: 200px;
+  height: 50px;
+  border: 1px solid var(--main-color) !important;
+}
+
+.special-btn a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  color: var(--main-color);
+  font-weight: bold;
+  text-decoration: none;
+  position: relative;
+  z-index: 1;
+}
+
+.special-btn::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -50%;
+  width: 50%;
+  height: 100%;
+  background: linear-gradient(to right,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(13, 110, 253, 0.4) 50%,
+      rgba(255, 255, 255, 0) 100%);
+  transform: skewX(-25deg);
+  transition: 0.7s ease;
+  z-index: 0;
+}
+
+/* Start Pricing Section */
+/* Start Testimonial Section */
+.owl-nav {
+  width: 120px;
+  display: flex;
+  margin: 2rem auto;
+  color: white;
+  padding: 0 !important;
+}
+
+.owl-prev,
+.owl-next {
+  background-color: var(--main-color) !important;
+  width: 55px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition-duration: 0.5s;
+}
+
+.owl-prev {
+  border-top-left-radius: 50px;
+  border-bottom-left-radius: 50px;
+  margin-right: 10px;
+}
+
+.owl-next {
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+}
+
+.owl-prev:hover,
+.owl-next:hover {
+  background-color: #1a1a1a !important;
+}
+/* End Testimonial Section */
+/* Start Blog Section */
+.blog-image img,
+.blog-text h5,
+.blog-data,
+.blog-icons,
+.blog-card .progress-bar,
+.blog-text a i{
+  transition: 0.4s ease;
+  -webkit-transition: 0.4s ease;
+  -moz-transition: 0.4s ease;
+  -ms-transition: 0.4s ease;
+  -o-transition: 0.4s ease;
+}
+.blog-image{
+  overflow: hidden;
+}
+.blog-card:hover .blog-image img{
+  transform: rotate(-3deg) scale(1.1);
+  -webkit-transform: rotate(-3deg) scale(1.1);
+  -moz-transform: rotate(-3deg) scale(1.1);
+  -ms-transform: rotate(-3deg) scale(1.1);
+  -o-transform: rotate(-3deg) scale(1.1);
+}
+.blog-text h5:hover {
+  color: var(--main-color) !important;
+  cursor: pointer;
+}
+.blog-data:hover {
+  color: var(--main-color) !important;
+  cursor: pointer;
+}
+.blog-card:hover .blog-icons{
+  background-color: var(--main-color) !important;
+}
+.blog-icons i{
+  transition-duration: 0.3s;
+}
+.blog-icons i:hover{
+  opacity: 75%;
+  cursor: pointer;
+}
+.blog-card:hover .progress-bar{
+  width: 100% !important;
+}
+.blog-text a:hover i{
+  padding-left: 1.2rem !important;
+}
+/* End Blog Section */
+/* Start Footer Section */
+footer .footer-btn,
+footer .footer-btn a{
+  transition-duration: 0.5s;
+}
+footer .footer-btn:hover{
+  background-color: var(--main-color) !important;
+}
+footer .footer-btn:hover a{
+  color: white !important;
+}
+/* End Footer Section */
+/* Start Copyriht Footer */
+.Copyright-foot{
+  box-shadow: 0 5px 10px 5px black;
+}
+/* End Copyriht Footer */
+/* Start Get In Touch Section */
+#contactForm input:hover,
+#contactForm input:focus{
+  border-color: var(--main-color) !important;
+}
+#contactForm textarea:hover,
+#contactForm textarea:focus{
+  border-color: var(--main-color) !important;
+  outline: none;
+}
+/* Eend Get In Touch Section */
